# gx

./: .gitignore  Cargo.toml  README.md  benchmark.py  demo.py
config/: default.toml
crates/bike-core/: Cargo.toml
crates/bike-core/src/: config.rs  dispatch.rs  domain.rs  error.rs  incentive.rs  lib.rs
crates/bike-optimize/: Cargo.toml
crates/bike-optimize/src/: greedy.rs  incentive.rs  lib.rs  vrp.rs
crates/bike-predict/: Cargo.toml
crates/bike-predict/src/: lib.rs  predictor.rs
crates/bike-server/: Cargo.toml
crates/bike-server/src/: handlers.rs  main.rs  state.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/public/generated-scenarios/: exam-week.json  festival-day.json  manifest.json  rainy-commute.json  weekday-spring.json  weekend-freeplay.json
web/scripts/: bench.ts  benchmark-cli.ts  compile-scenarios.mjs
web/src/: App.css  App.tsx
web/src/api/: client.ts
web/src/data/: constants.ts  demandProfiles.ts  presets.ts  scenarioLibrary.ts  stations.ts
web/src/hooks/: useAnimationFrame.ts
web/src/simulation/: agentSimulator.ts  benchmark.ts  benchmarkWorker.ts  clock.ts  demandGenerator.ts  dispatchExecution.ts  distanceMatrix.ts  engine.ts  ridingModel.ts  rng.ts  scenarioCompiler.ts  simulationBridge.ts  simulationWorker.ts  stateManager.ts  stateManagerV2.ts  workerProtocol.ts
web/src/store/: configStore.ts  simEnvStore.ts  simulationStore.ts  uiStore.ts
web/src/types/: api.ts  benchmark.ts  demand.ts  dispatch.ts  incentive.ts  scenario.ts  station.ts  time.ts
web/src/utils/: colors.ts  formatting.ts  (+1 more)
(+25 files in other folders)
